insert upload log file to parser to user input source log

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -612,7 +612,9 @@
     "txt-error-462": "Operators Executed Error.",
     "txt-error-463": "Flow Condition Not Passed.",
     "txt-error-464": "Create Flow Instance Failed(Possible aggField are missing).",
-    "txt-error-500": "SOAR server error"
+    "txt-error-500": "SOAR server error",
+    "txt-error-9100": "Parse Input Json Fail",
+    "txt-error-9102": "No execute due to som error"
   },
 
   "notifications": {
