Complete the SOAR section and bug fixes.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -113,7 +113,6 @@
   "txt-interval": "Interval",
   "txt-clear": "Clear",
   "txt-clearText": "Clear",
-  "txt-clear": "Clear",
   "txt-connect": "Connect",
   "txt-import": "Import",
   "txt-export": "Export",
@@ -198,7 +197,7 @@
   "txt-invalidDateMessage": "Invalid Date Format",
   "txt-minDateMessage": "Date should not be before minimal date",
   "txt-maxDateMessage": "Date should not be after maximal date",
-  "txt-exportScheduledList": "Export List",
+  "txt-exportScheduledList": "Export Schedule List",
   "txt-past7days": "Past 7 Days",
   "txt-scheduledTask": "Scheduled Task",
   "txt-downloadTask": "Downlaod",
@@ -551,21 +550,21 @@
     "txt-disableRule": "Confirm to disable rule",
     "txt-addRule": "Add Rule",
     "txt-deleteRule": "Delete Rule",
-    "txt-nodeSettings": "Node $t(txt-settings)",
-    "txt-linkSettings": "Link $t(txt-settings)",
     "txt-adapter": "Adapter",
+    "txt-node": "Node",
     "txt-action": "Action",
+    "txt-adapterSettings": "Adapter $t(txt-settings)",
+    "txt-nodeSettings": "Node $t(txt-settings)",
+    "txt-actionSettings": "Action $t(txt-settings)",
     "txt-soarRuleInfo": "SOAR Rule Info",
     "txt-soarRuleCondition": "SOAR Rule Condition",
+    "txt-aggFieldId": "Aggregation ID",
     "txt-gap": "Gap",
     "txt-protocol": "Protocol",
     "txt-port": "Port",
     "txt-path": "Path",
     "txt-file": "File",
-    "txt-title": "Title",
-    "txt-content": "Content",
     "txt-id": "ID",
-    "txt-action": "Action",
     "txt-ip": "IP",
     "txt-drop": "Drop",
     "txt-severityType": "Severity Type",
@@ -594,6 +593,8 @@
     "txt-receiver": "Recipient Email",
     "txt-title": "Title",
     "txt-content": "Content",
+    "txt-testConnections": "Test Connections",
+    "txt-successConnections": "Test connections success",
     "txt-upload": "Upload Logs",
     "txt-upload-msg": "Please enter or upload event Logs.",
     "txt-Settings": "Event Testing",
@@ -613,6 +614,7 @@
     "txt-error-463": "Flow Condition Not Passed.",
     "txt-error-464": "Create Flow Instance Failed(Possible aggField are missing).",
     "txt-error-500": "SOAR server error",
+    "txt-error-501": "Connect to SOAR fail",
     "txt-error-9100": "Parse Input Json Fail",
     "txt-error-9102": "No execute due to som error"
   },
