--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -197,7 +197,7 @@
   "txt-invalidDateMessage": "時間格式錯誤",
   "txt-minDateMessage": "時間不得在最小容許時間之前",
   "txt-maxDateMessage": "時間不得在最大容許時間之後",
-  "txt-exportScheduledList": "匯出排成列表",
+  "txt-exportScheduledList": "匯出排程列表",
   "txt-past7days": "最近7天",
   "txt-scheduledTask": "任務已排入",
   "txt-downloadTask": "下載",
@@ -544,30 +544,30 @@
   },
 
   "soar": {
-    "txt-ruleList": "SOAR 規則清單",
+    "txt-ruleList": "SOAR規則清單",
     "txt-soarSettings": "SOAR通用基本設定",
     "txt-soarFlow": "SOAR規則設定",
     "txt-disableRule": "請確認是否關閉此規則",
     "txt-addRule": "新增規則",
     "txt-deleteRule": "刪除規則",
+    "txt-adapter": "事件來源",
+    "txt-node": "節點",
+    "txt-action": "執行",
+    "txt-adapterSettings": "事件來源$t(txt-settings)",
     "txt-nodeSettings": "節點$t(txt-settings)",
-    "txt-linkSettings": "連結$t(txt-settings)",
-    "txt-adapter": "Adapter",
-    "txt-action": "Action",
-    "txt-soarRuleInfo": "SOAR Rule Info",
-    "txt-soarRuleCondition": "SOAR Rule Condition",
+    "txt-actionSettings": "執行$t(txt-settings)",
+    "txt-soarRuleInfo": "SOAR資本資訊",
+    "txt-soarRuleCondition": "SOAR條件",
+    "txt-aggFieldId": "事件綜整ID",
     "txt-gap": "Gap",
     "txt-protocol": "Protocol",
     "txt-port": "Port",
     "txt-path": "Path",
     "txt-file": "File",
-    "txt-title": "Title",
-    "txt-content": "Content",
     "txt-id": "ID",
-    "txt-action": "Action",
     "txt-ip": "IP",
-    "txt-drop": "Drop",
-    "txt-severityType": "Severity Type",
+    "txt-drop": "丟棄封包",
+    "txt-severityType": "嚴重等級",
     "txt-field": "Field",
     "txt-from": "From",
     "txt-to": "To",
@@ -593,6 +593,8 @@
     "txt-receiver": "收件者郵件信箱",
     "txt-title": "主旨",
     "txt-content": "內容",
+    "txt-testConnections": "連線測試",
+    "txt-successConnections": "連線成功",
     "txt-upload": "上傳測試Log檔",
     "txt-upload-msg": "請輸入或上傳事件Logs資料",
     "txt-Settings": "事件測試",
@@ -602,18 +604,19 @@
     "txt-error-404": "無對應SOAR流程",
     "txt-error-432": "欄位參數錯誤",
     "txt-error-433": "連結起訖點不存在",
-    "txt-error-434": "Parameter Parse Error",
+    "txt-error-434": "參數解析錯誤",
     "txt-error-451": "adapter上有多個連結",
     "txt-error-452": "節點或連結錯誤",
     "txt-error-453": "Adapter沒有連結節點",
     "txt-error-460": "Adapter上的port已被使用",
-    "txt-error-461": "Logs Don't Contain Required Field.",
-    "txt-error-462": "Operators Executed Error.",
-    "txt-error-463": "Flow Condition Not Passed.",
-    "txt-error-464": "Create Flow Instance Failed(Possible aggField are missing).",
+    "txt-error-461": "Log缺少需要的欄位",
+    "txt-error-462": "Operators執行錯誤",
+    "txt-error-463": "流程條件未通過",
+    "txt-error-464": "Log缺少事件綜整欄位",
     "txt-error-500": "SOAR主機錯誤",
-    "txt-error-9100": "Parse Input Json Fail",
-    "txt-error-9102": "No execute due to som error"
+    "txt-error-501": "無法連線到SOAR主機",
+    "txt-error-9100": "解析Json失敗",
+    "txt-error-9102": "因其他錯誤發生導致未執行"
   },
 
   "notifications": {
