--- a/locales/zh/errors.json
+++ b/locales/zh/errors.json
@@ -36,6 +36,7 @@
   "-453": "Adapter沒有連結節點",
   "-460": "Adapter上的port已被使用",
   "-500": "SOAR主機錯誤",
+  "-501": "無法連線到SOAR主機",
 
   "-1000": "發生未預期的錯誤",
   "-1001": "請輸入所有必填欄位",
