--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -350,6 +350,8 @@
     "txt-safetyScanType": "Safety Scan Type",
     "txt-export-cpe": "Export CPE",
     "txt-report-nccst": "Report NCCST",
+    "txt-report-withCpe": "Please onfirm the following CPE with exploit",
+    "txt-report-noCpe": "No CPE with exploit found",
     "txt-hostInfo": "Host Info",
     "txt-viewInfo": "View Info",
     "txt-hostList2": "Host",
