--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -350,6 +350,8 @@
     "txt-safetyScanType": "安全掃描類型",
     "txt-export-cpe": "匯出CPE",
     "txt-report-nccst": "回報NCCST",
+    "txt-report-withCpe": "請再次確認以下包含漏洞的CPE是否一併送出",
+    "txt-report-noCpe": "無包含漏洞的CPE",
     "txt-hostInfo": "主機資訊",
     "txt-viewInfo": "查看內容",
     "txt-hostList2": "主機清單",
