Update SOAR flow with more link options.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -555,9 +555,14 @@
     "txt-adapter": "Adapter",
     "txt-node": "Node",
     "txt-action": "Action",
+    "txt-defaultLink": "Link",
     "txt-adapterSettings": "Adapter $t(txt-settings)",
     "txt-nodeSettings": "Node $t(txt-settings)",
     "txt-actionSettings": "Action $t(txt-settings)",
+    "txt-linkAnimated": "Animated Link",
+    "txt-linkTypeCurve": "Curve",
+    "txt-linkTypeStraight": "Straight",
+    "txt-linkTypeStep": "Step",
     "txt-soarRuleInfo": "SOAR Rule Info",
     "txt-soarRuleCondition": "SOAR Rule Condition",
     "txt-aggFieldId": "Aggregation ID",
