--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -555,9 +555,14 @@
     "txt-adapter": "事件來源",
     "txt-node": "節點",
     "txt-action": "執行",
+    "txt-defaultLink": "連結",
     "txt-adapterSettings": "事件來源$t(txt-settings)",
     "txt-nodeSettings": "節點$t(txt-settings)",
     "txt-actionSettings": "執行$t(txt-settings)",
+    "txt-linkAnimated": "動畫顯示連結",
+    "txt-linkTypeCurve": "曲線",
+    "txt-linkTypeStraight": "直線",
+    "txt-linkTypeStep": "直角",
     "txt-soarRuleInfo": "SOAR資本資訊",
     "txt-soarRuleCondition": "SOAR條件",
     "txt-aggFieldId": "事件綜整ID",
