--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -559,6 +559,7 @@
     "txt-adapterSettings": "Adapter $t(txt-settings)",
     "txt-nodeSettings": "Node $t(txt-settings)",
     "txt-actionSettings": "Action $t(txt-settings)",
+    "txt-linkSettings": "Link $t(txt-settings)",
     "txt-linkAnimated": "Animated Link",
     "txt-linkTypeCurve": "Curve",
     "txt-linkTypeStraight": "Straight",
