--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -559,6 +559,7 @@
     "txt-adapterSettings": "事件來源$t(txt-settings)",
     "txt-nodeSettings": "節點$t(txt-settings)",
     "txt-actionSettings": "執行$t(txt-settings)",
+    "txt-linkSettings": "連結$t(txt-settings)",
     "txt-linkAnimated": "動畫顯示連結",
     "txt-linkTypeCurve": "曲線",
     "txt-linkTypeStraight": "直線",
