Finalize the SOAR flow page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -561,9 +561,10 @@
     "txt-actionSettings": "Action $t(txt-settings)",
     "txt-linkSettings": "Link $t(txt-settings)",
     "txt-linkAnimated": "Animated Link",
-    "txt-linkTypeCurve": "Curve",
-    "txt-linkTypeStraight": "Straight",
-    "txt-linkTypeStep": "Step",
+    "txt-linkType-default": "Curve",
+    "txt-linkType-straight": "Straight",
+    "txt-linkType-step": "Step",
+    "txt-linkType-smoothstep": "Smooth Step",
     "txt-soarRuleInfo": "SOAR Rule Info",
     "txt-soarRuleCondition": "SOAR Rule Condition",
     "txt-aggFieldId": "Aggregation ID",
@@ -606,6 +607,9 @@
     "txt-upload": "Upload Logs",
     "txt-upload-msg": "Please enter or upload event Logs.",
     "txt-Settings": "Event Testing",
+    "txt-adapterError": "Only one adapter is allowed",
+    "txt-adapterErrorLink": "Adapter needs to have an associate link",
+    "txt-backToListWarning": "Unsaved data will be lost, please confirm to proceed",
     "txt-dryRun": "Run",
     "txt-dryRunLogMissing": "Testing Log could not empty",
     "txt-error-400": "Bad Request",
