--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -561,9 +561,10 @@
     "txt-actionSettings": "執行$t(txt-settings)",
     "txt-linkSettings": "連結$t(txt-settings)",
     "txt-linkAnimated": "動畫顯示連結",
-    "txt-linkTypeCurve": "曲線",
-    "txt-linkTypeStraight": "直線",
-    "txt-linkTypeStep": "直角",
+    "txt-linkType-default": "曲線",
+    "txt-linkType-straight": "直線",
+    "txt-linkType-step": "階梯",
+    "txt-linkType-smoothstep": "圓滑階梯",
     "txt-soarRuleInfo": "SOAR資本資訊",
     "txt-soarRuleCondition": "SOAR條件",
     "txt-aggFieldId": "事件綜整ID",
@@ -606,6 +607,9 @@
     "txt-upload": "上傳測試Log檔",
     "txt-upload-msg": "請輸入或上傳事件Logs資料",
     "txt-Settings": "事件測試",
+    "txt-adapterError": "只容許一個事件來源節點",
+    "txt-adapterErrorLink": "事件來源節點沒有連結",
+    "txt-backToListWarning": "未儲存的資料將會遺失，請確認要繼續",
     "txt-dryRun": "執行測試",
     "txt-dryRunLogMissing": "測試Log不得為空值",
     "txt-error-400": "Bad Request",
