Complete the Host page multi filter input search.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -765,6 +765,7 @@
     "txt-totalItem": "Total",
     "txt-lastUpdate": "Last Update",
     "txt-createTime": "Create Time",
+    "txt-viewMore": "View More",
     "txt-responseTime": "Response Time",
     "txt-saveSettings": "Save",
     "txt-restoreDefault": "Restore Default",
@@ -1059,6 +1060,8 @@
     "system": "System",
     "deviceType": "Type",
     "scanInfo": "Safety Scan Info",
+    "status": "Status",
+    "annotation": "Annotation",
     "keyword": "Keyword",
     "errCode": "Error",
     "connSize": "Connections Size",
