--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -765,6 +765,7 @@
     "txt-totalItem": "總項目",
     "txt-lastUpdate": "最近更新時間",
     "txt-createTime": "檢測時間",
+    "txt-viewMore": "檢視更多",
     "txt-responseTime": "回應時間",
     "txt-saveSettings": "儲存設定",
     "txt-restoreDefault": "還原預設值",
@@ -1059,6 +1060,8 @@
     "system": "使用系統",
     "deviceType": "裝置類型",
     "scanInfo": "安全掃描資訊",
+    "status": "處理狀態",
+    "annotation": "註記",
     "keyword": "關鍵字",
     "errCode": "錯誤訊息",
     "connSize": "Connections Size",
