Fix the empty data bug for Host page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -203,6 +203,7 @@
   "txt-downloadTask": "Downlaod",
   "txt-deleteTask": "Delete Task",
   "txt-retriggerTask": "Retrigger Task",
+  "txt-specialCharacterError": "Special character is not allowed for file name",
   "txt-palette": "Palette",
 
   "txt-dashboard": "Dashboard",
