Implement the Inventory redirect for Host/Alert dialog.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -205,6 +205,7 @@
   "txt-retriggerTask": "Retrigger Task",
   "txt-specialCharacterError": "Special character is not allowed for file name",
   "txt-palette": "Palette",
+  "txt-viewEdit": "View More or Edit",
 
   "txt-dashboard": "Dashboard",
   "txt-host-eng": "Host",
