Fix SOAR data gets polluted bug. Implement the update seat name functionality.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -50,6 +50,7 @@
   "txt-uploadFailed": "Upload Failed: incorrect file format",
   "txt-uploadEmpty": "No data to upload",
   "txt-seat": "Seat",
+  "txt-seatName": "Seat Name",
   "txt-service": "Service",
   "txt-number": "Number",
   "txt-memo": "Memo",
@@ -905,6 +906,7 @@
     "txt-success": "Total success count",
     "txt-fail": "Total fail count",
     "txt-duplicatedIP": "IP already exists, please enter another IP",
+    "txt-seatDeviceInfo": "Seat/Device Info",
     "txt-noDevice": "No device is available",
     "txt-VansProductRegex": "VANS Software List",
     "txt-reportNCCST": "Report NCCST Settings",
