--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -50,6 +50,7 @@
   "txt-uploadFailed": "上傳失敗: 格式錯誤",
   "txt-uploadEmpty": "無資料上傳",
   "txt-seat": "座位",
+  "txt-seatName": "座位名稱",
   "txt-service": "服務",
   "txt-number": "數字",
   "txt-memo": "備忘錄",
@@ -905,6 +906,7 @@
     "txt-success": "上傳成功筆數",
     "txt-fail": "上傳失敗筆數",
     "txt-duplicatedIP": "IP已存在，請重新輸入",
+    "txt-seatDeviceInfo": "座位/裝置資訊",
     "txt-noDevice": "此座位無裝置",
     "txt-VansProductRegex": "VANS軟體抓取表",
     "txt-reportNCCST": "回報NCCST設定",
