Update JSON expand/collapse logic.

--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -486,7 +486,8 @@
     "txt-accessRecord": "門禁紀錄",
     "txt-floorInfo": "樓層圖",
     "txt-safetyScan": "安全掃描",
-    "txt-toggleOpenBtn": "縮合 / 展開",
+    "txt-toggleExpand": "展開",
+    "txt-toggleCollapse": "收合",
     "txt-alertThreatLevelSrc": "客戶威脅來源等級統計",
     "txt-alertThreatCountSrc": "客戶威脅來源統計",
     "txt-alertThreatSubnetSrc": "內部威脅來源網段",
