--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -486,7 +486,8 @@
     "txt-accessRecord": "Access Control Behavior",
     "txt-floorInfo": "Floor",
     "txt-safetyScan": "Safety Scan",
-    "txt-toggleOpenBtn": "Collapse / Expand",
+    "txt-toggleExpand": "Expand",
+    "txt-toggleCollapse": "Collapse",
     "txt-alertThreatLevelSrc": "Source Threats Count",
     "txt-alertThreatCountSrc": "Source Threats Level",
     "txt-alertThreatSubnetSrc": "Internal Source Masked IP",
