--- a/locales/en/errors.json
+++ b/locales/en/errors.json
@@ -50,6 +50,8 @@
   "-1009": "Password incorrect",
   "-1010": "Error login fail",
   "-1011": "Fail to connect Email Server",
+  "-1012": "Please contactyour AD System Manager for this account",
+  "-1013": "Invaid token",
 
   "-2001": "Unknown Target",
   "-2002": "Expired",
