Update error code.

--- a/locales/en/errors.json
+++ b/locales/en/errors.json
@@ -52,6 +52,7 @@
   "-1011": "Fail to connect Email Server",
   "-1012": "Please contactyour AD System Manager for this account",
   "-1013": "Invaid token",
+  "-1014": "Account is not found",
 
   "-2001": "Unknown Target",
   "-2002": "Expired",
