--- a/locales/zh/errors.json
+++ b/locales/zh/errors.json
@@ -52,6 +52,7 @@
   "-1011": "連線Email伺服器失敗",
   "-1012": "該帳號的密碼由AD控管，請洽AD系統管理員",
   "-1013": "Token比對無效",
+  "-1014": "此帳號不存在",
 
   "-2001": "目標未明",
   "-2002": "已到期",
