--- a/locales/en/app.json
+++ b/locales/en/app.json
@@ -23,6 +23,7 @@
 
   "txt-fist-login": "First time login",
   "txt-forgotPassword": "Forgot Password",
+  "txt-capsLockOn": "Caps Lock On",
   "txt-enterAccount": "Please enter your account",
   "txt-enterToken": "Please check your email for the one-time code",
   "txt-enterNewPassword": "Please choose a new password",
