Add mini map show/hide option for React Flow component.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -566,10 +566,10 @@
     "txt-actionSettings": "Action $t(txt-settings)",
     "txt-linkSettings": "Link $t(txt-settings)",
     "txt-linkAnimated": "Animated Link",
+    "txt-showMiniMap": "Show Mini Map",
     "txt-linkType-default": "Curve",
     "txt-linkType-straight": "Straight",
-    "txt-linkType-step": "Step",
-    "txt-linkType-smoothstep": "Smooth Step",
+    "txt-linkType-smoothstep": "Step",
     "txt-soarRuleInfo": "SOAR Rule Info",
     "txt-soarRuleCondition": "SOAR Rule Condition",
     "txt-aggFieldId": "Aggregation ID",
