--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -566,10 +566,10 @@
     "txt-actionSettings": "執行$t(txt-settings)",
     "txt-linkSettings": "連結$t(txt-settings)",
     "txt-linkAnimated": "動畫顯示連結",
+    "txt-showMiniMap": "顯示迷你視窗",
     "txt-linkType-default": "曲線",
     "txt-linkType-straight": "直線",
-    "txt-linkType-step": "階梯",
-    "txt-linkType-smoothstep": "圓滑階梯",
+    "txt-linkType-smoothstep": "階梯",
     "txt-soarRuleInfo": "SOAR資本資訊",
     "txt-soarRuleCondition": "SOAR條件",
     "txt-aggFieldId": "事件綜整ID",
