Add and implement auto-detect threats type option for Threats upload dialog.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -105,6 +105,7 @@
   "txt-password": "Password",
   "txt-start": "Start",
   "txt-stop": "Stop",
+  "txt-type": "Type",
   "txt-activate": "Activate",
   "txt-at": "at",
   "txt-realtime": "Realtime",
@@ -689,6 +690,9 @@
     "txt-addThreat": "Add Threat",
     "txt-importThreat": "Import Threat",
     "txt-searchThreat": "Search Threat",
+    "txt-viewExample": "See example",
+    "txt-autoDetectType": "Auto detect type",
+    "txt-exampleDesc": "Please use enter key to separate items:",
     "txt-basicInfo": "Info",
     "txt-editEdge": "Edit Edge",
     "txt-edgeName": "Edge Name",
