--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -105,6 +105,7 @@
   "txt-password": "密碼",
   "txt-start": "開始",
   "txt-stop": "停止",
+  "txt-type": "種類",
   "txt-activate": "啟動",
   "txt-at": "在",
   "txt-realtime": "Realtime",
@@ -689,6 +690,9 @@
     "txt-addThreat": "新增威脅情資",
     "txt-importThreat": "匯入威脅情資",
     "txt-searchThreat": "查詢威脅情資",
+    "txt-viewExample": "查看範例",
+    "txt-autoDetectType": "自動判斷種類",
+    "txt-exampleDesc": "檔案請以Enter鍵斷行做區隔:",
     "txt-basicInfo": "基本資訊",
     "txt-editEdge": "編輯Edge",
     "txt-edgeName": "Edge名稱",
