Update SOAR settings label. Add sftp connection check before calling HMD IR trigger.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -582,10 +582,10 @@
     "txt-gap": "Gap",
     "txt-protocol": "Protocol",
     "txt-port": "Port",
-    "txt-path": "Path",
+    "txt-path": "Element (JSON Path)",
     "txt-file": "File",
-    "txt-id": "ID",
-    "txt-ip": "IP",
+    "txt-id": "Host ID (JSON Path)",
+    "txt-ip": "IP (JSON Path)",
     "txt-drop": "Drop",
     "txt-severityType": "Severity Type",
     "txt-field": "Field",
@@ -823,6 +823,7 @@
     "txt-netcut": "Disconnected",
     "txt-netcutResume": "Resume",
     "txt-confirmTo": "Confirm to ",
+    "txt-checkHmdSettings": "Please check HMD settings",
     "scan-list": {
       "txt-yara": "Yara Scan",
       "txt-scanFile": "Malware",
