--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -582,10 +582,10 @@
     "txt-gap": "Gap",
     "txt-protocol": "Protocol",
     "txt-port": "Port",
-    "txt-path": "Path",
+    "txt-path": "Element (JSON Path)",
     "txt-file": "File",
-    "txt-id": "ID",
-    "txt-ip": "IP",
+    "txt-id": "Host ID (JSON Path)",
+    "txt-ip": "IP (JSON Path)",
     "txt-drop": "丟棄封包",
     "txt-severityType": "嚴重等級",
     "txt-field": "Field",
@@ -823,6 +823,7 @@
     "txt-netcut": "斷網",
     "txt-netcutResume": "恢復",
     "txt-confirmTo": "確認要",
+    "txt-checkHmdSettings": "請檢查HMD設定",
     "scan-list": {
       "txt-yara": "Yara Scan",
       "txt-scanFile": "Malware",
