--- a/locales/zh/errors.json
+++ b/locales/zh/errors.json
@@ -53,6 +53,7 @@
   "-1012": "該帳號的密碼由AD控管，請洽AD系統管理員",
   "-1013": "驗證碼無效",
   "-1014": "此帳號不存在",
+  "-1015": "寄信失敗",
 
   "-2001": "目標未明",
   "-2002": "已到期",
