add search status in soc manager

--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -89,7 +89,8 @@
 	"txt-incident-event": "Security Monitoring",
 	"txt-incident-related": "Correlation Analysis",
 	"txt-incident-health": "Health Status Statistic",
-	"txt-export-all": "Export Incidents in Search List",
+	"txt-export-all": "Export Incidents by PDF in Search List",
+	"txt-export-all-word": "Export Incidents by Word in Search List",
 	"txt-addIncident-events": "Add Security Monitoring Incident",
 	"txt-addIncident-ttps": "Add Correlation Analysis Incident",
 	"txt-viewIncident-events": "View Security Monitoring Incident",
