--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -90,7 +90,8 @@
 	"txt-incident-event": "資安監控",
 	"txt-incident-related": "關聯分析",
 	"txt-incident-health": "健康狀態統計",
-	"txt-export-all": "匯出列表中所有事件單",
+	"txt-export-all": "以PDF匯出列表中所有事件單",
+	"txt-export-all-word": "以Word匯出列表中所有事件單",
 	"txt-addIncident-events": "新增資安監控事件單",
 	"txt-addIncident-ttps": "新增關聯分析事件單",
 	"txt-viewIncident-events": "檢視資安監控事件單",
