Add more columns for Inventory IP batch upload page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -1067,6 +1067,9 @@
     "userName": "User",
     "disks": "$t(txt-disks)",
     "shareFolders": "$t(txt-shareFolders)",
+    "ownerId": "Owner ID",
+    "ownerName": "Owner Name",
+    "departmentName": "Department",
     "remarks": "Remarks",
     "cpu": "$t(txt-cpu)",
     "ram": "$t(txt-ram)",
