--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -1067,6 +1067,9 @@
     "userName": "人員",
     "disks": "$t(txt-disks)",
     "shareFolders": "$t(txt-shareFolders)",
+    "ownerId": "所屬人員ID",
+    "ownerName": "所屬人員",
+    "departmentName": "部門",
     "remarks": "備註",
     "cpu": "$t(txt-cpu)",
     "ram": "$t(txt-ram)",
