--- a/locales/zh/errors.json
+++ b/locales/zh/errors.json
@@ -72,6 +72,10 @@
   "-5009": "Log主機IP不存在",
   "-5010": "SSH帳號重複",
   "-5011": "呼叫Restful API失敗",
+  "-5012": "所屬人員不一致",
+  "-5013": "部門不存在",
+  "-5014": "部門不一致",
+  "-5015": "新增人員失敗",
 
   "-6801": "PDF服務連線失敗",
 
