--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -768,6 +768,8 @@
   "hmd-scan": {
     "txt-hmdSettings": "HMD Settings",
     "txt-hmdDownload": "HMD $t(txt-download)",
+    "txt-uploadHMDfile": "Upload HMD setup file",
+    "txt-hmdSetupFile": "HMD setup file",
     "txt-triggerAll": "Trigger All (HMD)",
     "txt-yaraRules": "Yara Rules",
     "txt-gcbVersion": "GCB Version",
@@ -1067,6 +1069,9 @@
     "userName": "User",
     "disks": "$t(txt-disks)",
     "shareFolders": "$t(txt-shareFolders)",
+    "ownerId": "Owner ID",
+    "ownerName": "Owner Name",
+    "departmentName": "Department",
     "remarks": "Remarks",
     "cpu": "$t(txt-cpu)",
     "ram": "$t(txt-ram)",
