Add host name edit functionality. Add two more search columns for Syslog config.

--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -1116,6 +1116,10 @@
     "txt-formatSettings": "格式設定",
     "txt-relationship": "關聯設定",
     "txt-hostIP": "主機IP",
+    "txt-hostName": "主機名稱",
+    "txt-editHostName": "編輯主機名稱",
+    "txt-netProxyStatus": "NetProxy狀態",
+    "txt-netProxyName": "NetProxy名稱",
     "txt-getLatest": "取得最新串流資料",
     "txt-customFieldName": "自訂欄位名稱",
     "txt-lastUpdate": "狀態更新時間",
