--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -1116,6 +1116,10 @@
     "txt-formatSettings": "Format Settings",
     "txt-relationship": "Relationship",
     "txt-hostIP": "Host IP",
+    "txt-hostName": "Host Name",
+    "txt-editHostName": "Edit Host Name",
+    "txt-netProxyStatus": "NetProxy Status",
+    "txt-netProxyName": "NetProxy Name",
     "txt-getLatest": "Get Latest Input Text",
     "txt-customFieldName": "Custom Field Name",
     "txt-lastUpdate": "Last status update",
