Add 'Unregister' button in HMD settings page. Add empty item selection for batch IP upload.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -792,6 +792,7 @@
     "txt-downloadLogs": "Download Logs",
     "txt-compressLogs": "Compress Logs",
     "txt-recompressLogs": "Recompress Logs",
+    "txt-unregister": "Unregister",
     "txt-addToFilterList": "Add to filter list",
     "txt-suspiciousFileCount": "Suspicious File Count",
     "txt-suspiciousFileName": "Suspicious Filename",
