Replace Host PDF export to CSV security diagnostic export.

--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -187,6 +187,7 @@
   "txt-viewJSON": "$t(txt-view)JSON",
   "txt-exportCSV": "$t(txt-export)CSV",
   "txt-exportPDF": "$t(txt-export)PDF",
+  "txt-exportSecurityDiagnostic": "$t(txt-export)資安健診",
   "txt-maxDataMsg": "資料筆數最大為10,000筆",
   "txt-es-data-over-limit": "超出搜尋範圍，請修改查詢條件",
   "txt-duplicatedName": "名稱不得重複",
