--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -187,6 +187,7 @@
   "txt-viewJSON": "$t(txt-view) JSON",
   "txt-exportCSV": "$t(txt-export) CSV",
   "txt-exportPDF": "$t(txt-export) PDF",
+  "txt-exportSecurityDiagnostic": "$t(txt-export) Security Diagnostic",
   "txt-maxDataMsg": "The maximum data count is 10,000",
   "txt-es-data-over-limit": "Exceed max queried number, please revise filters",
   "txt-duplicatedName": "Name is duplicated",
