--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -924,6 +924,7 @@
     "txt-seatDeviceInfo": "座位/裝置資訊",
     "txt-noDevice": "此座位無裝置",
     "txt-VansProductRegex": "VANS軟體抓取表",
+    "txt-cpeSoftwareList": "CPE軟體列表",
     "txt-reportNCCST": "回報NCCST設定",
     "txt-unitOID": "機關OID",
     "txt-unitName": "機關名稱",
