Add CPE format checking for HMD settings.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -924,7 +924,10 @@
     "txt-seatDeviceInfo": "Seat/Device Info",
     "txt-noDevice": "No device is available",
     "txt-VansProductRegex": "VANS Software List",
-    "txt-cpeSoftwareList": "CPE Software List",
+    "txt-cpeSoftwareList": "Security Diagnostic Software List",
+    "txt-softwareName": "Software Name",
+    "txt-cpeItem": " CPE Item",
+    "txt-cpeFormatError": "Please check the CPE format in Security Diagnostic Software List",
     "txt-reportNCCST": "Report NCCST Settings",
     "txt-unitOID": "Unit OID",
     "txt-unitName": "Unit Name",
