--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -924,7 +924,10 @@
     "txt-seatDeviceInfo": "座位/裝置資訊",
     "txt-noDevice": "此座位無裝置",
     "txt-VansProductRegex": "VANS軟體抓取表",
-    "txt-cpeSoftwareList": "CPE軟體列表",
+    "txt-cpeSoftwareList": "資安健診軟體列表",
+    "txt-softwareName": "軟體名稱",
+    "txt-cpeItem": " CPE項目",
+    "txt-cpeFormatError": "請檢查資安健診軟體列表之CPE格式",
     "txt-reportNCCST": "回報NCCST設定",
     "txt-unitOID": "機關OID",
     "txt-unitName": "機關名稱",
