--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -191,6 +191,7 @@
   "txt-maxDataMsg": "The maximum data count is 10,000",
   "txt-es-data-over-limit": "Exceed max queried number, please revise filters",
   "txt-duplicatedName": "Name is duplicated",
+  "txt-checkFormat": "Please check the format",
   "txt-checkRequiredFieldType": "Please check all the required fields and its format",
   "txt-threatsSrcCountryRank": "Source Country Alert Rank",
   "txt-checkDateFormat": "Please check date format",
