Work on the export download menu for Syslog Config page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -1122,6 +1122,8 @@
     "txt-dataResult": "Data Result",
     "txt-formatSettings": "Format Settings",
     "txt-relationship": "Relationship",
+    "txt-exportSyslogCharts": "Export Syslog Charts",
+    "txt-exportScheduleList": "Last 7 days export schedule",
     "txt-hostIP": "Host IP",
     "txt-hostName": "Host Name",
     "txt-editHostName": "Edit Host Name",
