Add export CSV functionality for Events syslog statistics page. Add validation for HMD settings software list.

--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -379,7 +379,7 @@
     "txt-isNotScan": "未執行掃描",
     "txt-isScanFinished": "已完成所有項目",
     "txt-isScanUnfinished": "尚有未完成項目",
-    "txt-isScanFail": "Fail (執行異常)",
+    "txt-isScanFail": "執行異常",
     "txt-title-scanFile": "惡意程式資訊",
     "txt-title-gcbDetection": "GCB漏洞掃描資訊",
     "txt-title-getFileIntegrity": "檔案完整性掃描資訊",
@@ -938,7 +938,7 @@
     "txt-cpeSoftwareList": "資安健診軟體列表",
     "txt-softwareName": "軟體名稱",
     "txt-cpeItem": " CPE項目",
-    "txt-cpeFormatError": "請檢查資安健診軟體列表之CPE格式",
+    "txt-cpeFormatError": "請檢查資安健診軟體列表之必填欄位及格式",
     "txt-reportNCCST": "回報NCCST設定",
     "txt-unitOID": "機關OID",
     "txt-unitName": "機關名稱",
@@ -1133,7 +1133,6 @@
     "txt-formatSettings": "格式設定",
     "txt-relationship": "關聯設定",
     "txt-exportSyslogCharts": "匯出日誌趨勢圖",
-    "txt-exportScheduleList": "最近7天匯出排成列表",
     "txt-hostIP": "主機IP",
     "txt-hostName": "主機名稱",
     "txt-editHostName": "編輯主機名稱",
