--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -938,7 +938,7 @@
     "txt-cpeSoftwareList": "Security Diagnostic Software List",
     "txt-softwareName": "Software Name",
     "txt-cpeItem": " CPE Item",
-    "txt-cpeFormatError": "Please check the CPE format in Security Diagnostic Software List",
+    "txt-cpeFormatError": "Please check the CPE required field and format in Security Diagnostic Software List",
     "txt-reportNCCST": "Report NCCST Settings",
     "txt-unitOID": "Unit OID",
     "txt-unitName": "Unit Name",
@@ -1133,7 +1133,6 @@
     "txt-formatSettings": "Format Settings",
     "txt-relationship": "Relationship",
     "txt-exportSyslogCharts": "Export Syslog Charts",
-    "txt-exportScheduleList": "Last 7 days export schedule",
     "txt-hostIP": "Host IP",
     "txt-hostName": "Host Name",
     "txt-editHostName": "Edit Host Name",
